crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_call_recursive.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "factorial",
            ret_type: Some(
                I32,
            ),
            params: [
                LocalId(
                    0,
                ),
            ],
            locals: [
                Local {
                    name: Some(
                        "n",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Bool,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: Binary {
                                op: Le,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Int(
                                    1,
                                ),
                            },
                        },
                        If {
                            cond: Local(
                                LocalId(
                                    1,
                                ),
                            ),
                            then_bb: BlockId(
                                1,
                            ),
                            else_bb: BlockId(
                                2,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            Some(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                3,
                            ),
                            value: Binary {
                                op: Sub,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Int(
                                    1,
                                ),
                            },
                        },
                        Assign {
                            local: LocalId(
                                4,
                            ),
                            value: Call {
                                name: "factorial",
                                args: [
                                    Local(
                                        LocalId(
                                            3,
                                        ),
                                    ),
                                ],
                            },
                        },
                        Assign {
                            local: LocalId(
                                5,
                            ),
                            value: Binary {
                                op: Mul,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Local(
                                    LocalId(
                                        4,
                                    ),
                                ),
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        5,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            None,
                        ),
                    ],
                },
            ],
        },
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Call {
                                name: "factorial",
                                args: [
                                    Int(
                                        5,
                                    ),
                                ],
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
